--- a/Uno_BME280/platformio.ini
+++ b/Uno_BME280/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor@^1.1.14
 	adafruit/Adafruit BME280 Library@^2.2.4
 	bblanchon/ArduinoJson@^7.0.4
+	fmalpartida/LiquidCrystal@^1.5.0
