--- a/S3_Amoled/platformio.ini
+++ b/S3_Amoled/platformio.ini
@@ -12,4 +12,8 @@
 platform = espressif32
 board = lilygo-t-display-s3
 framework = arduino
-lib_deps = bodmer/TFT_eSPI@^2.5.43
+lib_deps = 
+	bodmer/TFT_eSPI@^2.5.43
+	adafruit/Adafruit Unified Sensor@^1.1.14
+	adafruit/Adafruit BME280 Library@^2.2.4
+	bblanchon/ArduinoJson@^7.0.4
