--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,4 @@ FodyWeavers.xsd
 Web/wwwroot/images/catch/473b45ff-aed3-40b8-a5dc-8a15d913ebb0.jpg
 *.JPG
 Utility/Security.cs
+/S3_Amoled/.vscode
