--- a/S3_Amoled/platformio.ini
+++ b/S3_Amoled/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor@^1.1.14
 	adafruit/Adafruit BME280 Library@^2.2.4
 	bblanchon/ArduinoJson@^7.0.4
+	cotestatnt/AsyncEspFsWebserver@^1.0.5
